[package]
name = "executable_memory"
version = "0.1.3"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["executable", "memory", "windows"]
categories = ["memory-management", "no-std"]

description = "executable memory for windows and unix"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-executable_memory"
homepage = "https://github.com/nathanfaucett/rs-executable_memory"

[dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["memoryapi", "winnt", "errhandlingapi"] }

[dev-dependencies]
